[gd_scene load_steps=14 format=3 uid="uid://06g17auavead"]

[ext_resource type="Script" uid="uid://y4oviosjpr4b" path="res://scenes/10_th_front_elevator.gd" id="1_7uuou"]
[ext_resource type="Texture2D" uid="uid://xlucip8we8fl" path="res://background/N7/10_th_front-elevator.png" id="2_7uuou"]
[ext_resource type="Script" uid="uid://dvjtmsb7f2jjw" path="res://script/point_light_2d.gd" id="3_tlhti"]
[ext_resource type="AudioStream" uid="uid://bov8m7g5sun5x" path="res://sound/switch-light.mp3" id="4_1o6ga"]
[ext_resource type="Script" uid="uid://c5t6orv6fk05s" path="res://script/point_light_2d_2.gd" id="5_jodt7"]
[ext_resource type="AudioStream" uid="uid://ce3p0vms1hhe" path="res://sound/emergency.mp3" id="6_75hse"]
[ext_resource type="AudioStream" uid="uid://bl17882kv7bjh" path="res://sound/bg.mp3" id="7_dkovk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m68p8"]
size = Vector2(4203.24, 79.5296)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sfnf4"]
size = Vector2(9.1377, 1194.42)

[sub_resource type="Gradient" id="Gradient_nej8r"]
offsets = PackedFloat32Array(0.0714286, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0d1ea"]
gradient = SubResource("Gradient_nej8r")
fill = 1
fill_from = Vector2(0.513761, 0)
fill_to = Vector2(0.724771, 0.444954)

[sub_resource type="Gradient" id="Gradient_ngqgh"]
colors = PackedColorArray(0.995771, 0.0990882, 0.155467, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_a03po"]
gradient = SubResource("Gradient_ngqgh")
fill = 1
fill_from = Vector2(0.504587, 0.477064)
fill_to = Vector2(0.798165, 0.123853)

[node name="10th-front-elevator" type="Node2D"]
script = ExtResource("1_7uuou")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-5, 0)
texture = ExtResource("2_7uuou")

[node name="CanvasModulate" type="CanvasModulate" parent="Sprite2D"]
visible = false
z_index = 1
color = Color(0.0509804, 0.0509804, 0.0509804, 0.960784)

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/StaticBody2D"]
position = Vector2(0, 112.074)
scale = Vector2(0.203041, 0.203041)
shape = SubResource("RectangleShape2D_m68p8")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Sprite2D/StaticBody2D"]
position = Vector2(422.499, -0.256256)
scale = Vector2(0.203041, 0.203041)
shape = SubResource("RectangleShape2D_sfnf4")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Sprite2D/StaticBody2D"]
position = Vector2(-426, 5.96046e-08)
scale = Vector2(0.203041, 0.203041)
shape = SubResource("RectangleShape2D_sfnf4")

[node name="PointLight2D" type="PointLight2D" parent="Sprite2D"]
visible = false
z_index = 1
position = Vector2(-105, 93)
scale = Vector2(2.1875, 4.66015)
energy = 4.0
texture = SubResource("GradientTexture2D_0d1ea")
script = ExtResource("3_tlhti")

[node name="light" type="AudioStreamPlayer2D" parent="Sprite2D/PointLight2D"]
position = Vector2(-28.8, -19.7789)
scale = Vector2(0.457143, 0.214405)
stream = ExtResource("4_1o6ga")
volume_db = -5.0

[node name="PointLight2D2" type="PointLight2D" parent="Sprite2D"]
visible = false
z_index = 2
position = Vector2(318, -60)
scale = Vector2(1.73438, 1.73438)
energy = 2.5
texture = SubResource("GradientTexture2D_a03po")
script = ExtResource("5_jodt7")

[node name="emergency" type="AudioStreamPlayer2D" parent="Sprite2D/PointLight2D2"]
stream = ExtResource("6_75hse")

[node name="SpawnFromMap1" type="Marker2D" parent="Sprite2D"]
position = Vector2(-281.9, 101.1)
gizmo_extents = 100.1

[node name="SpawnFromMap2" type="Marker2D" parent="Sprite2D"]
position = Vector2(388.1, 101.1)
gizmo_extents = 100.1

[node name="bg" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_dkovk")
volume_db = -10.0
autoplay = true
parameters/looping = true

[node name="btn1" type="Marker2D" parent="."]
z_as_relative = false
position = Vector2(-219, 5)
gizmo_extents = 91.1

[node name="btn2" type="Marker2D" parent="."]
z_index = 12
position = Vector2(396, 7)
gizmo_extents = 127.1

[node name="E_Label" type="RichTextLabel" parent="."]
offset_right = 40.0
offset_bottom = 40.0
text = "E"
metadata/_edit_use_anchors_ = true
